force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>FHIR Schedule — availability template for a practitioner or location. Scheduling infrastructure; organization-wide default is Public Read Only.</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>