force-app/main/default/objects/Schedule__c/fields/Planning_Horizon_End__c.field-meta.xml
<CustomField>
    <fullName>Planning_Horizon_End__c</fullName>
    <label>Planning Horizon End</label>
    <type>Date</type>
</CustomField>