force-app/main/default/objects/Schedule__c/fields/Planning_Horizon_Start__c.field-meta.xml
<CustomField>
    <fullName>Planning_Horizon_Start__c</fullName>
    <label>Planning Horizon Start</label>
    <type>Date</type>
</CustomField>