force-app/main/default/objects/Schedule__c/fields/Slot_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Slot_Duration_Minutes__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Slot Duration Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>