force-app/main/default/objects/Schedule__c/listViews/Active_Schedules.listView-meta.xml
<ListView>
    <fullName>Active_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Planning_Horizon_Start__c</columns>
    <columns>Planning_Horizon_End__c</columns>
    <columns>Slot_Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Schedules</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>