force-app/main/default/objects/Schedule__c/listViews/All_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Planning_Horizon_Start__c</columns>
    <columns>Planning_Horizon_End__c</columns>
    <columns>Slot_Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Schedules</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>